--- a/test-result/BasicTest.class.passed.html
+++ b/test-result/BasicTest.class.passed.html
@@ -80,7 +80,7 @@
                                                                         Ok
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
-                        14 ms
+                        31 ms
                     </td>
                 </tr>
                                 <tr>
@@ -91,7 +91,7 @@
                                                                         Ok
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
-                        22 ms
+                        47 ms
                     </td>
                 </tr>
                                 <tr>
@@ -102,7 +102,7 @@
                                                                         Ok
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
-                        24 ms
+                        62 ms
                     </td>
                 </tr>
                                 <tr>
@@ -113,7 +113,7 @@
                                                                         Ok
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
-                        25 ms
+                        31 ms
                     </td>
                 </tr>
                                 <tr>
@@ -124,7 +124,7 @@
                                                                         Ok
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
-                        53 ms
+                        78 ms
                     </td>
                 </tr>
                                 <tr>
@@ -136,6 +136,17 @@
                                             </td>
                     <td width="5%" align="right" class="time" valign="top">
                         328 ms
+                    </td>
+                </tr>
+                                <tr>
+                    <td width="20%" class="passed" valign="top">
+                        <span>testTags</span>
+                    </td>
+                    <td class="" valign="top">
+                                                                        Ok
+                                            </td>
+                    <td width="5%" align="right" class="time" valign="top">
+                        78 ms
                     </td>
                 </tr>
                             </table>
